Changed some methods in Account Model and is now functioning